fix overlapping [#567]

--- a/app/assets/landing/routes/Demo/index.css
+++ b/app/assets/landing/routes/Demo/index.css
@@ -4,7 +4,7 @@
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 2147483644;
+  z-index: 2147483645;
   background-color: white;
 }
 
